# holobone

./: .Dockerfile.swp  Cargo.toml  DC-DC design.ipynb  Dockerfile  Jenkinsfile  README.md  cross.toml  install  logo_filled.dxf
cli_runner/: Cargo.toml
cli_runner/src/: asteroids_game.rs  asteroids_renderer.rs  font_manager.rs  main.rs  renderer.rs  svg_renderer.rs  text_renderer.rs
cli_runner/src/asteroids_game/: asteroid.rs  collider.rs  collision_manager.rs  physics.rs  pose.rs  renderer.rs  shuttle.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
hardware/: logo.dxf  logo_filled.dxf
hardware/cape/: .~lock.holobone.csv#  _autosave-holobone.sch  fp-info-cache  fp-lib-table  holobone  holobone-cache.lib  holobone.csv  holobone.dcm  holobone.kicad_pcb  holobone.kicad_pcb-bak  holobone.lib  holobone.net  holobone.pro  holobone.sch  holobone.sch-bak  holobone.xml  sym-lib-table
hardware/cape/HoloBone.pretty/: EdBuilds_logo.kicad_mod  HoloBone_logo12.2x10.5mm.kicad_mod  HoloBone_logo_copper_holo.kicad_mod
hardware/cape/hex_test_points.pretty/: hex_test_pad_1mm.kicad_mod  hex_test_pad_2mm.kicad_mod
hardware/cape/plots/: holobone-B_Cu.gbr  holobone-B_Mask.gbr  holobone-B_SilkS.gbr  holobone-Edge_Cuts.gbr  holobone-F_Cu.gbr  holobone-F_Mask.gbr  holobone-F_SilkS.gbr  holobone.drl
holobone_api/: Cargo.toml
holobone_api/src/: lib.rs
parser/: Cargo.toml
parser/src/: main.rs
pru_control/: Cargo.toml
pru_control/src/: lib.rs
prufw/: HOLOBONE-SPI0-00A0.dts  PRUClock.p  PRUDAC.p  pwm_test.asm
prufw/pwm/: Makefile  main.c
pruif/: Cargo.toml
pruif/src/: lib.rs  main.rs  pruss_eg.rs
src/: main.rs  tracer.rs
tracer/: Cargo.toml
tracer/src/: lib.rs  segments.rs
visual_debugger/: Cargo.toml
visual_debugger/src/: lib.rs
web_server/: Cargo.toml
web_server/src/: main.rs
