[package]
name = "cli_runner"
version = "0.1.0"
authors = ["Tamas Feher <ta.f@automata.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
svg = "0.8.0"
svgtypes = "0.5.0"
serde = "1.0.118"
serde-xml-rs = "0.4.0"
serde_derive = "1.0.118"
serde_path_to_error = "0.1.4"
xmlparser = "0.13.0"
ctrlc = "3.1.5"
lyon_path = "0.16.0"
walkdir = "2.3.1"
rltk = { version = "0.8.0" }
specs = "0.16.1"
specs-derive = "0.4.1"
tracer = {path = "../tracer"}
pru_control = {path = "../pru_control"}
pruif = {path = "../pruif"}
euclid = "*"
rand = "*"

[dependencies.lyon]
version = "0.16.0"
features = ["svg"]

