[package]
name = "frontend"
version = "0.1.0"
authors = ["Tamas Feher <ta.f@automata.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.36"
serde = "1.0"
serde_json = "1.0"
yew = "0.17"
wasm-bindgen = "0.2.67"
