[package]
name = "pruif"
version = "0.1.0"
authors = ["Tamas Feher <ta.f@automata.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
bitflags = "1.2.1"
pru_control = {path = "../pru_control"}

[target.'cfg(target_arch = "x86_64")'.dependencies]
visual_debugger = {path = "../visual_debugger"}

[target.armv7-unknown-linux-gnueabihf.dependencies]
prusst = "1.0.0"

