[package]
name = "tracer"
version = "0.1.0"
authors = ["Tamas Feher <ta.f@automata.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svgtypes = "0.5.0"
svg = "0.8.0"
num-traits = "0.2"
lyon_geom = "0.15.0"
lyon_path = "0.16.0"
pruif = {path = "../pruif"}

[dependencies.lyon]
version = "0.16.0"





