[package]
name = "web_server"
version = "0.1.0"
authors = ["Tamas Feher <ta.f@automata.tech>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
holobone_api = {path = "../holobone_api"}

[dependencies.rocket_contrib]
version = "0.4.5"
features = ["handlebars_templates", "tera_templates"]

